# milky_bot

./: .breakpoints  main.py  pyproject.toml
milky_bot/: capybara.py  economy.py  main.py  profile.py
milky_bot/inspire_bot/: inspire.py
milky_bot/resources/: bs.py
