[tool.poetry]
name = "repl_python3_milky-bot"
version = "0.1.0"
description = ""
authors = ["FlashWhite <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
replit = "^3.2.4"
pymongo = "^3.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
